exports[`ListItem component matches selected snapshot 1`] = `
<li
  className="selected"
  onClick={[Function]}>
  id5424
</li>
`;

exports[`ListItem component matches unselected snapshot 1`] = `
<li
  onClick={[Function]}>
  id3424
</li>
`;

exports[`Tree component matches snapshot 1`] = `
<ul>
  <ListItem
    isSelected={false}
    number={0}
    onClick="onClick function"
    value="a" />
  <ListItem
    isSelected={false}
    number={1}
    onClick="onClick function"
    value="b" />
  <ListItem
    isSelected={true}
    number={2}
    onClick="onClick function"
    value="c" />
</ul>
`;
